[gd_scene load_steps=6 format=3 uid="uid://dalktguxudra8"]

[ext_resource type="Theme" uid="uid://bmjg1574lxkq" path="res://ui/themes/settings_theme.tres" id="1_3ioqg"]
[ext_resource type="Script" uid="uid://c1ve6qkwvohlw" path="res://ui/screens/settings/settings_screen.gd" id="2_ehjt7"]

[sub_resource type="InputEventKey" id="InputEventKey_3ioqg"]
device = -1
keycode = 4194305

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_tmx33"]
button_index = 6
pressed = true

[sub_resource type="Shortcut" id="Shortcut_cf5cc"]
events = [SubResource("InputEventKey_3ioqg"), SubResource("InputEventJoypadButton_tmx33")]

[node name="SettingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3ioqg")
script = ExtResource("2_ehjt7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.232, 0.5684, 0.58, 1)

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="SettingsTab" type="TabContainer" parent="MC/VB"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MC/VB"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="HB" type="HBoxContainer" parent="MC/VB/MarginContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MC/VB/MarginContainer/HB"]
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_left = NodePath("../SaveButton")
focus_neighbor_right = NodePath("../SaveButton")
focus_next = NodePath("../SaveButton")
focus_previous = NodePath("../SaveButton")
shortcut = SubResource("Shortcut_cf5cc")
text = "Go Back"

[node name="SaveButton" type="Button" parent="MC/VB/MarginContainer/HB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
text = "Save"

[node name="SaveDialog" type="ConfirmationDialog" parent="."]
title = "Save and Apply Settings"
initial_position = 2
size = Vector2i(300, 100)
content_scale_mode = 2
content_scale_aspect = 1
content_scale_stretch = 1

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
title = "You have unsaved settings !"
initial_position = 2
size = Vector2i(300, 80)
unresizable = true
popup_window = true
min_size = Vector2i(300, 30)
content_scale_mode = 2
content_scale_aspect = 1
content_scale_stretch = 1
ok_button_text = "Go Back"
cancel_button_text = "Stay !"

[connection signal="pressed" from="MC/VB/MarginContainer/HB/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MC/VB/MarginContainer/HB/SaveButton" to="." method="_on_save_button_pressed"]
